--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
+    "date-fns": "^3.1.0",
+    "moment": "^2.30.1",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-responsive-ui": "^0.15.56",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
