project-init-persist

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-responsive-ui": "^0.15.56",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
