--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-responsive-ui": "^0.15.56",
+    "react-router-dom": "^6.21.1",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
