--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "date-fns": "^3.1.0",
