--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.4",
+    "@mui/x-date-pickers": "^6.19.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "date-fns": "^3.1.0",
+    "dayjs": "^1.11.10",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
     "react": "^18.2.0",
