--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.4",
     "react-responsive-ui": "^0.15.56",
     "react-router-dom": "^6.21.1",
