--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
-    "@mui/material": "^5.15.4",
+    "@mui/material": "^5.15.5",
     "@mui/x-date-pickers": "^6.19.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@rollup/plugin-babel": "^6.0.4",
     "axios": "^1.6.5",
     "date-fns": "^3.1.0",
     "dayjs": "^1.11.10",
@@ -37,6 +38,11 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-transform-runtime": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
+    "@emotion/babel-plugin": "^11.11.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
