--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-hook-form": "^7.49.3",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.4",
-    "react-responsive-ui": "^0.15.56",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^9.1.3",
     "redux": "^5.0.1",
