--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.5",
     "date-fns": "^3.1.0",
     "dayjs": "^1.11.10",
+    "framer-motion": "^10.18.0",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
     "react": "^18.2.0",
